:tada: update reademe and package.json

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "react typescript template",
   "repository": {
-    "url": "promer94/sao-typescript-react",
+    "url": "https://github.com/promer94/sao-typescript-react",
     "type": "git"
   },
   "author": "yixuan xu <yixuanxu94@gmail.com> (github.com/promer94)",
