--- a/package.json
+++ b/package.json
@@ -13,13 +13,15 @@
     "template"
   ],
   "scripts": {
-    "test": "ava"
+    "test": "ava",
+    "commit": "git cz"
   },
   "dependencies": {
     "superb": "^1.3.0"
   },
   "devDependencies": {
     "ava": "^0.25.0",
+    "git-cz": "^3.2.1",
     "sao": "^1.0.0"
   }
 }
