--- a/template/package.json
+++ b/template/package.json
@@ -14,7 +14,8 @@
   },
   "scripts": {
     "start": "poi --serve",
-    "build": "poi --prod"
+    "build": "poi --prod",
+    "commit": "git cz"
   },
   "browserslist": {
     "production": [
@@ -47,6 +48,7 @@
     "eslint-config-xo-typescript": "^0.15.0",
     "eslint-plugin-prettier": "^3.1.0",
     "eslint-plugin-react-hooks": "^1.6.1",
+    "git-cz": "^3.2.1",
     "husky": "^3.0.2",
     "poi": "^12.7.1",
     "prettier": "^1.18.2",
