chore: 🤖 change to npm

--- a/template/package.json
+++ b/template/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/core": "^10.0.15",
     "@poi/plugin-typescript": "^12.2.1",
     "@types/jest": "24.0.16",
     "@types/node": "12.6.9",
@@ -39,6 +40,7 @@
     "@types/poi": "^12.5.0",
     "@typescript-eslint/eslint-plugin": "^1.13.0",
     "@typescript-eslint/parser": "^1.13.0",
+    "babel-plugin-emotion": "^10.0.15",
     "eslint": "^6.1.0",
     "eslint-config-prettier": "^6.0.0",
     "eslint-config-react": "^1.1.7",
@@ -50,7 +52,7 @@
     "eslint-plugin-react-hooks": "^1.6.1",
     "git-cz": "^3.2.1",
     "husky": "^3.0.2",
-    "poi": "^12.7.1",
+    "poi": "^12.7.2",
     "prettier": "^1.18.2",
     "pretty-quick": "^1.11.1",
     "react-hot-loader": "^4.12.10",
