--- a/template/package.json
+++ b/template/package.json
@@ -10,7 +10,7 @@
     "@types/react": "16.8.24",
     "@types/react-dom": "16.8.5",
     "react": "^16.8.6",
-    "react-dom": "^16.8.6",
+    "react-dom": "npm:@hot-loader/react-dom",
     "typescript": "^3.5.3"
   },
   "scripts": {
