--- a/template/package.json
+++ b/template/package.json
@@ -1,28 +1,17 @@
 {
   "name": "react-typescript-template",
   "version": "1.0.0",
-  "private": true,
   "dependencies": {
     "@emotion/core": "^10.0.15",
     "react": "^16.9.0",
-    "react-dom": "npm:@hot-loader/react-dom"
+    "react-dom": "npm:@hot-loader/react-dom",
+    "typescript": "^3.5.3"
   },
   "scripts": {
     "start": "poi --serve",
-    "build": "poi --prod --bundle-report",
+    "build": "poi --prod",
+    "bundle": "poi --prod --bundle-report",
     "commit": "git cz"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
   },
   "husky": {
     "hooks": {
@@ -30,19 +19,18 @@
     }
   },
   "devDependencies": {
+    "poi": "^12.7.2",
     "@poi/plugin-typescript": "^12.2.1",
-    "typescript": "^3.5.3",
+    "@poi/plugin-bundle-report": "^12.1.1",
     "@types/jest": "24.0.16",
     "@types/node": "12.6.9",
     "@types/react": "16.8.24",
     "@types/react-dom": "16.8.5",
+    "babel-plugin-emotion": "^10.0.15",
     "@babel/preset-typescript": "^7.3.3",
-    "@poi/plugin-bundle-report": "^12.1.1",
-    "@types/poi": "^12.5.0",
+    "eslint": "^6.1.0",
     "@typescript-eslint/eslint-plugin": "^1.13.0",
     "@typescript-eslint/parser": "^1.13.0",
-    "babel-plugin-emotion": "^10.0.15",
-    "eslint": "^6.1.0",
     "eslint-config-prettier": "^6.0.0",
     "eslint-config-react": "^1.1.7",
     "eslint-config-xo": "^0.26.0",
@@ -53,10 +41,8 @@
     "eslint-plugin-react-hooks": "^1.6.1",
     "git-cz": "^3.2.1",
     "husky": "^3.0.2",
-    "poi": "^12.7.2",
     "prettier": "^1.18.2",
     "pretty-quick": "^1.11.1",
-    "react-hot-loader": "^4.12.10",
-    "ts-node": "^8.3.0"
+    "react-hot-loader": "^4.12.10"
   }
 }
