--- a/template/package.json
+++ b/template/package.json
@@ -11,7 +11,9 @@
     "start": "poi --serve",
     "build": "poi --prod",
     "bundle": "poi --prod --bundle-report",
-    "commit": "git cz"
+    "commit": "git cz",
+    "format": "pretty-quick",
+    "lint": "eslint src/**/*.tsx src/**/*.ts --fix"
   },
   "husky": {
     "hooks": {
@@ -19,18 +21,17 @@
     }
   },
   "devDependencies": {
-    "poi": "^12.7.2",
-    "@poi/plugin-typescript": "^12.2.1",
+    "@babel/preset-typescript": "^7.3.3",
     "@poi/plugin-bundle-report": "^12.1.1",
+    "@poi/plugin-typescript": "^12.2.1",
     "@types/jest": "24.0.16",
     "@types/node": "12.6.9",
     "@types/react": "16.8.24",
     "@types/react-dom": "16.8.5",
-    "babel-plugin-emotion": "^10.0.15",
-    "@babel/preset-typescript": "^7.3.3",
-    "eslint": "^6.1.0",
     "@typescript-eslint/eslint-plugin": "^1.13.0",
     "@typescript-eslint/parser": "^1.13.0",
+    "babel-plugin-emotion": "^10.0.15",
+    "eslint": "^6.1.0",
     "eslint-config-prettier": "^6.0.0",
     "eslint-config-react": "^1.1.7",
     "eslint-config-xo": "^0.26.0",
@@ -38,9 +39,11 @@
     "eslint-config-xo-space": "^0.21.0",
     "eslint-config-xo-typescript": "^0.15.0",
     "eslint-plugin-prettier": "^3.1.0",
+    "eslint-plugin-react": "^7.14.3",
     "eslint-plugin-react-hooks": "^1.6.1",
     "git-cz": "^3.2.1",
     "husky": "^3.0.2",
+    "poi": "^12.7.2",
     "prettier": "^1.18.2",
     "pretty-quick": "^1.11.1",
     "react-hot-loader": "^4.12.10"
