--- a/template/package.json
+++ b/template/package.json
@@ -13,7 +13,8 @@
     "bundle": "poi --prod --bundle-report",
     "commit": "git cz",
     "format": "pretty-quick",
-    "lint": "eslint src/**/*.tsx src/**/*.ts --fix"
+    "lint": "eslint src/**/*.tsx src/**/*.ts --fix",
+    "test": "jest"
   },
   "husky": {
     "hooks": {
@@ -24,12 +25,15 @@
     "@babel/preset-typescript": "^7.3.3",
     "@poi/plugin-bundle-report": "^12.1.1",
     "@poi/plugin-typescript": "^12.2.1",
+    "@testing-library/jest-dom": "^4.0.0",
+    "@testing-library/react": "^9.1.0",
     "@types/jest": "24.0.16",
     "@types/node": "12.6.9",
     "@types/react": "16.8.24",
     "@types/react-dom": "16.8.5",
     "@typescript-eslint/eslint-plugin": "^1.13.0",
     "@typescript-eslint/parser": "^1.13.0",
+    "babel-jest": "^24.8.0",
     "babel-plugin-emotion": "^10.0.15",
     "eslint": "^6.1.0",
     "eslint-config-prettier": "^6.0.0",
@@ -43,6 +47,7 @@
     "eslint-plugin-react-hooks": "^1.6.1",
     "git-cz": "^3.2.1",
     "husky": "^3.0.2",
+    "jest": "^24.8.0",
     "poi": "^12.7.2",
     "prettier": "^1.18.2",
     "pretty-quick": "^1.11.1",
