--- a/package.json
+++ b/package.json
@@ -16,12 +16,18 @@
     "test": "ava",
     "commit": "git cz"
   },
+  "husky": {
+    "hooks": {
+      "pre-commit": "git cz"
+    }
+  },
   "dependencies": {
     "superb": "^1.3.0"
   },
   "devDependencies": {
     "ava": "^0.25.0",
     "git-cz": "^3.2.1",
+    "husky": "^3.0.3",
     "sao": "^1.0.0"
   }
 }
