--- a/template/package.json
+++ b/template/package.json
@@ -4,7 +4,7 @@
   "dependencies": {
     "@emotion/core": "^10.0.15",
     "react": "^16.9.0",
-    "react-dom": "npm:@hot-loader/react-dom",
+    "react-dom": "^16.9.0",
     "typescript": "^3.5.3"
   },
   "scripts": {
