--- a/template/tsconfig.json
+++ b/template/tsconfig.json
@@ -24,7 +24,20 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react"
+    "jsx": "react",
+    "baseUrl": "./",
+    "paths": {
+      "@/utils": ["src/utils"],
+      "@/components": ["src/components"],
+      "@/hooks": ["./src/hooks"]
+    }
   },
-  "include": ["src"]
+  "include": ["src"],
+  "exclude": [
+    "node_modules",
+    "babel.config.js",
+    "metro.config.js",
+    "jest.config.js",
+    "script"
+  ]
 }
