--- a/package.json
+++ b/package.json
@@ -16,13 +16,18 @@
     "test": "ava",
     "commit": "git cz"
   },
+  "husky": {
+    "hooks": {
+      "prepare-commit-msg": "exec < /dev/tty && git cz --hook || true"
+    }
+  },
   "dependencies": {
-    "superb": "^1.3.0"
+    "superb": "^4.0.0"
   },
   "devDependencies": {
     "ava": "^0.25.0",
-    "git-cz": "^3.2.1",
-    "husky": "^3.0.3",
-    "sao": "^1.0.0"
+    "git-cz": "^4.3.1",
+    "husky": "^4.2.3",
+    "sao": "^1.7.0"
   }
 }
