--- a/template/package.json
+++ b/template/package.json
@@ -2,10 +2,10 @@
   "name": "react-typescript-template",
   "version": "1.0.0",
   "dependencies": {
-    "@emotion/core": "^10.0.15",
-    "react": "^16.9.0",
-    "react-dom": "^16.9.0",
-    "typescript": "^3.5.3"
+    "@emotion/core": "^10.0.28",
+    "react": "^16.13.0",
+    "react-dom": "^16.13.0",
+    "typescript": "^3.8.3"
   },
   "scripts": {
     "start": "poi --serve",
@@ -18,36 +18,36 @@
   },
   "husky": {
     "hooks": {
+      "prepare-commit-msg": "exec < /dev/tty && git cz --hook || true",
       "pre-commit": "pretty-quick --staged"
     }
   },
   "devDependencies": {
-    "@babel/preset-typescript": "^7.3.3",
-    "@poi/plugin-bundle-report": "^12.1.1",
+    "@babel/preset-typescript": "^7.8.3",
+    "@poi/plugin-bundle-report": "^12.1.2",
     "@poi/plugin-typescript": "^12.2.1",
-    "@testing-library/jest-dom": "^4.0.0",
-    "@testing-library/react": "^9.1.0",
-    "@types/jest": "24.0.16",
-    "@types/node": "12.6.9",
-    "@types/react": "16.8.24",
-    "@types/react-dom": "16.8.5",
-    "@typescript-eslint/eslint-plugin": "^1.13.0",
-    "@typescript-eslint/parser": "^1.13.0",
-    "babel-jest": "^24.8.0",
-    "babel-plugin-emotion": "^10.0.15",
-    "eslint": "^6.1.0",
-    "eslint-config-prettier": "^6.0.0",
-    "eslint-config-xo": "^0.26.0",
-    "eslint-config-xo-react": "^0.20.0",
-    "eslint-config-xo-space": "^0.21.0",
-    "eslint-config-xo-typescript": "^0.15.0",
-    "eslint-plugin-prettier": "^3.1.0",
-    "git-cz": "^3.2.1",
-    "husky": "^3.0.2",
-    "jest": "^24.8.0",
-    "poi": "^12.7.2",
-    "prettier": "^1.18.2",
-    "pretty-quick": "^1.11.1",
-    "react-hot-loader": "^4.12.10"
+    "@testing-library/jest-dom": "^5.1.1",
+    "@testing-library/react": "^9.4.1",
+    "@types/jest": "25.1.3",
+    "@types/node": "13.7.7",
+    "@types/react": "16.9.23",
+    "@types/react-dom": "16.9.5",
+    "@typescript-eslint/eslint-plugin": "^2.22.0",
+    "@typescript-eslint/parser": "^2.22.0",
+    "babel-jest": "^25.1.0",
+    "babel-plugin-emotion": "^10.0.29",
+    "eslint": "^6.8.0",
+    "eslint-config-prettier": "^6.10.0",
+    "eslint-config-xo": "^0.29.1",
+    "eslint-config-xo-react": "^0.23.0",
+    "eslint-config-xo-space": "^0.24.0",
+    "eslint-config-xo-typescript": "^0.26.0",
+    "eslint-plugin-prettier": "^3.1.2",
+    "git-cz": "^4.3.1",
+    "husky": "^4.2.3",
+    "jest": "^25.1.0",
+    "poi": "^12.7.5",
+    "prettier": "^1.19.1",
+    "pretty-quick": "^2.0.1"
   }
 }
