feat: ✨ change path alias

--- a/template/tsconfig.json
+++ b/template/tsconfig.json
@@ -27,9 +27,9 @@
     "jsx": "react",
     "baseUrl": "./",
     "paths": {
-      "@/utils": ["src/utils"],
-      "@/components": ["src/components"],
-      "@/hooks": ["./src/hooks"]
+      "@/*": [
+        "src/*"
+      ]
     }
   },
   "include": ["src"],
