--- a/template/package.json
+++ b/template/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "dependencies": {
     "@emotion/core": "^10.0.28",
-    "react": "^16.13.0",
-    "react-dom": "^16.13.0",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
     "typescript": "^3.8.3"
   },
   "scripts": {
@@ -23,31 +23,33 @@
     }
   },
   "devDependencies": {
-    "@babel/preset-typescript": "^7.8.3",
+    "@babel/preset-typescript": "^7.9.0",
     "@poi/plugin-bundle-report": "^12.1.2",
-    "@poi/plugin-typescript": "^12.2.1",
-    "@testing-library/jest-dom": "^5.1.1",
-    "@testing-library/react": "^9.4.1",
-    "@types/jest": "25.1.3",
-    "@types/node": "13.7.7",
-    "@types/react": "16.9.23",
-    "@types/react-dom": "16.9.5",
-    "@typescript-eslint/eslint-plugin": "^2.22.0",
-    "@typescript-eslint/parser": "^2.22.0",
-    "babel-jest": "^25.1.0",
-    "babel-plugin-emotion": "^10.0.29",
+    "@poi/plugin-typescript": "^12.3.0",
+    "@testing-library/jest-dom": "^5.5.0",
+    "@testing-library/react": "^10.0.2",
+    "@types/jest": "^25.2.1",
+    "@types/node": "^13.11.1",
+    "@types/react": "^16.9.34",
+    "@types/react-dom": "^16.9.6",
+    "@typescript-eslint/eslint-plugin": "^2.27.0",
+    "@typescript-eslint/parser": "^2.27.0",
+    "babel-jest": "^25.3.0",
+    "babel-plugin-emotion": "^10.0.33",
     "eslint": "^6.8.0",
-    "eslint-config-prettier": "^6.10.0",
+    "eslint-config-prettier": "^6.10.1",
     "eslint-config-xo": "^0.29.1",
     "eslint-config-xo-react": "^0.23.0",
     "eslint-config-xo-space": "^0.24.0",
-    "eslint-config-xo-typescript": "^0.26.0",
-    "eslint-plugin-prettier": "^3.1.2",
+    "eslint-config-xo-typescript": "^0.27.0",
+    "eslint-plugin-prettier": "^3.1.3",
+    "eslint-plugin-react": "^7.19.0",
+    "eslint-plugin-react-hooks": "^3.0.0",
     "git-cz": "^4.3.1",
-    "husky": "^4.2.3",
-    "jest": "^25.1.0",
+    "husky": "^4.2.5",
+    "jest": "^25.3.0",
     "poi": "^12.7.5",
-    "prettier": "^1.19.1",
+    "prettier": "^2.0.4",
     "pretty-quick": "^2.0.1"
   }
 }
